# taiko-gateway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  config.toml  dashboard.json  gateway.example.toml  gateway.toml  justfile  ratio.ipynb
.github/workflows/: build.yml  lint.yml
abi/: ForcedInclusionStore.abi.json  PreconfRouter.abi.json  PreconfWhitelist.abi.json  TaikoAnchor.abi.json  TaikoEvents.json  TaikoInbox.abi.json  TaikoL1.json  TaikoL2.json  TaikoWrapper.abi.json
crates/cmd/: Cargo.toml  gateway.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  balance.rs  beacon.rs  config.rs  driver.rs  erc20.rs  fetcher.rs  lib.rs  metrics.rs  proposer.rs  runtime.rs  sequencer.rs  types.rs  utils.rs
crates/common/src/taiko/: anchor.rs  blob.rs  block_22866.json  block_22867.json  checks.rs  fixed_signer.rs  lookahead.rs  mod.rs
crates/common/src/taiko/pacaya/: 1199.json  1200.json  1225296.json  1225297.json  1275729.json  1275730.json  1478988.json  1478998.json  4.json  5.json  599.json  600.json  750.json  751.json  anchor.rs  forced.rs  mod.rs  propose.rs
crates/common/src/taiko/propose/: blob.rs  mod.rs  taiko_l1.rs  utils.rs
crates/driver/: Cargo.toml
crates/driver/src/: driver.rs  fetcher.rs  lib.rs
crates/proposer/: Cargo.toml
crates/proposer/src/: builder.rs  client.rs  error.rs  includer.rs  lib.rs  manager.rs  manager_resync.rs  types.rs
crates/proposer/src/taiko/: contract.rs  mod.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  lib.rs  server.rs  sub.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: constants.rs  context.rs  error.rs  fetcher.rs  jwt.rs  lib.rs  sequencer.rs  simulator.rs  soft_block.rs  sorting.rs  tx_pool.rs  txpool.rs  types.rs  worker.rs
scripts/: gateway.sh
tests/: Cargo.toml
tests/tests/: spammer.rs
