[package]
name = "pc-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pc-common.workspace = true
pc-rpc.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-eips.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-transport-http.workspace = true
alloy-consensus.workspace = true
jsonrpsee.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
