[package]
name = "pc-cmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pc-common.workspace = true
pc-rpc.workspace = true
pc-sequencer.workspace = true
pc-proposer.workspace = true
pc-driver.workspace = true

crossbeam-channel.workspace = true

# Async / Threads
tokio.workspace = true

eyre.workspace = true
tracing.workspace = true
serde_json.workspace = true

[[bin]]
name = "gateway"
path = "gateway.rs"
