[package]
name = "pc-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-transport-http.workspace = true
axum.workspace = true
backtrace.workspace = true
c-kzg.workspace = true
crossbeam-channel.workspace = true
ecdsa.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
lazy_static.workspace = true
libflate.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
taiko_event_indexer.workspace = true
taiko_rpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-loki.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
