[package]
name = "pc-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pc-common.workspace = true


alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-eips.workspace = true
alloy-provider.workspace = true
alloy-transport-http.workspace = true

url.workspace = true

crossbeam-channel.workspace = true
tracing.workspace = true

reqwest.workspace = true

eyre.workspace = true
tokio.workspace = true
