[package]
name = "pc-proposer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-txpool.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport-http.workspace = true
eyre.workspace = true
parking_lot.workspace = true
pc-common.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true