[package]
name = "pc-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-txpool.workspace = true
async-trait.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
pc-common.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
