[package]
name = "pc-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-txpool.workspace = true
async-trait.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
futures-util.workspace = true
jsonrpsee.workspace = true
pc-common.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
