[package]
name = "pc-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pc-common.workspace = true

tokio.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true

jsonrpsee.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true

eyre.workspace = true
